--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,8 +37,8 @@ jobs:
         run: |
           ./deploy.sh
           REST="curl -siX POST                                       \
-              -H "Accept: application/vnd.github.v3+json"            \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H 'Accept: application/vnd.github.v3+json'            \
+              -H 'Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
               -d '{"ref": "master"}'                                 \
               https://api.github.com/repos/$ENDPOINT/dispatches"
 
